--- a/public/css/sass/_mixins.scss
+++ b/public/css/sass/_mixins.scss
@@ -8,21 +8,19 @@
 .gradient {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#af6ee2+0,e479f7+100 */
 	background: #af6ee2; /* Old browsers */
-	background-attachment: fixed;
-	background: -moz-linear-gradient(-25deg, #af6ee2 0%, darken(#af6ee2,5%) 100%); /* FF3.6-7 */
-	background: -webkit-linear-gradient(-25deg, #af6ee2 0%,darken(#af6ee2,5%) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(155deg, #af6ee2 0%,darken(#af6ee2,5%) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background-image: linear-gradient(155deg, #af6ee2 0%,darken(#af6ee2,5%) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#af6ee2', endColorstr='darken(#af6ee2,5%)',GradientType=1 ); /*
 	 IE6-9 fallback on horizontal gradient */
+    background-repeat:no-repeat;
 }
 
 .gradient-alt {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#af6ee2+0,05abe0+100 */
+
 	background: rgb(175,110,226); /* Old browsers */
-	background: -moz-linear-gradient(-45deg, rgba(175,110,226,1) 0%, rgba(5,171,224,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, rgba(175,110,226,1) 0%,rgba(5,171,224,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, rgba(175,110,226,1) 0%,rgba(5,171,224,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background-image: linear-gradient(135deg, rgba(175,110,226,1) 0%,rgba(5,171,224,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#af6ee2', endColorstr='#05abe0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background-repeat:no-repeat;
 }
 
 .shadow-low {
